--- a/frontend/src/components/common/pages/account.css
+++ b/frontend/src/components/common/pages/account.css
@@ -13,4 +13,18 @@ th{
 }.col4{
     width : 150px;
     background-color : #FFE3EE;
+}.col5{
+    width : 200px;
+}
+.col6{
+    width : 250px;
+    background-color : #00FFFF;
+}.col7{
+    width : 200px;
+    
+}.col8{
+    width : 200px;
+    background-color : #00FFFF;
+}.col9{
+    width : 150px;
 }
