--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -22,4 +22,5 @@
     --color-pebble-2 : #928490;
     --color-pebble-3 : #DBC1AD;
     --color-pebble-4 : #F3E8EB;
+    --color-pebble-hover : #872642;
 }
